--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
   get: ^4.6.5
+#This is for translation in the app
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0 
 
 dev_dependencies:
   flutter_test:
@@ -55,10 +59,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  generate: true
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
