--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   google_fonts: ^3.0.1
   get: ^4.6.5
   country_picker: ^2.0.19
+  firebase_core: ^2.4.0
+  firebase_storage: ^11.0.9
+  cloud_firestore: ^4.3.0
+  uuid: ^3.0.7
 
 
 dev_dependencies:
