--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^11.0.9
   cloud_firestore: ^4.3.0
   uuid: ^3.0.7
+  firebase_auth: ^4.2.3
 
 
 dev_dependencies:
