--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flag: ^6.0.0
   flutter:
     sdk: flutter
+  flutter_email_sender: ^5.2.0
   get: ^4.6.5
   google_fonts: ^3.0.1
   intl: null
