--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   country_picker: ^2.0.19
   cupertino_icons: ^1.0.2
   date_picker_timeline: ^1.2.3
+  device_preview: ^1.1.0
   firebase_auth: ^4.2.3
   firebase_core: ^2.4.0
   firebase_storage: ^11.0.9
@@ -41,6 +42,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_email_sender: ^5.2.0
+  flutter_screenutil: ^5.6.0
   get: ^4.6.5
   google_fonts: ^3.0.1
   intl: null
@@ -48,10 +50,10 @@ dependencies:
   uuid: ^3.0.7
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
   android: true
