--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   google_fonts: ^3.0.1
   intl: null
   mailer: ^5.3.0
+  responsive_framework: ^0.2.0
+  sizer: ^2.0.15
   uuid: ^3.0.7
 
 dev_dependencies:
